# fast-api-practice

./: .gitignore  fast-api-practice.db  main.py  pyproject.toml  schemas.py
db/: database.py  db_article.py  db_user.py  models.py
router/: article.py  blog_get.py  blog_post.py  product.py  user.py
