[tool.poetry]
name = "fast-api-practice"
version = "0.1.0"
description = ""
authors = ["vahan-sahakyan <vahan.sahakyan1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
